# semtools-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/arxiv/: benchmark.py  benchmark_qualitative_report_workspace.md
src/semtools/: cli.py
src/semtools/parse/: __init__.py  backend.py  cache.py  client.py  config.py  enums.py
src/semtools/search/: __init__.py  core.py  engine.py  loader.py  models.py  presenter.py  utils.py
src/semtools/workspace/: __init__.py  core.py  errors.py  models.py  store.py
tests/: conftest.py
tests/parse/: test_backend.py  test_cache.py  test_client.py
tests/search/: fixtures.py  test_core.py  test_engine.py  test_loader.py  test_presenter.py
tests/workspace/: fixtures.py  test_core.py  test_store.py
