[project]
name = "semtools-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "model2vec",
    "scipy",
    "numpy",
    "httpx",
    "lancedb",
    "click",
]

[project.scripts]
parse = "semtools.cli:parse"
search = "semtools.cli:search"
workspace = "semtools.cli:workspace"