[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "semtools-py"
version = "0.1.0"
description = "Semantic search and document parsing tools for the command line"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "model2vec",
    "scipy",
    "numpy",
    "httpx",
    "lancedb",
    "click",
]

[project.scripts]
parse = "semtools.cli:parse"
search = "semtools.cli:search"
workspace = "semtools.cli:workspace"